Cacti CHANGELOG

0.8.8e
-bug: Fixed issue with graph zooming failing to work
-bug: Fixed various SQL Injection vectors
-bug#0002574: SQL Injection Vulnerabilitie in graph items and graph template items
-bug#0002577: CVE-2015-4634 - SQL injection in graphs.php
-bug#0002579: SQL Injection Vulnerabilitie in data sources
-bug#0002580: SQL Injection in cdef.php
-bug#0002582: SQL Injection in data_templates.php
-bug#0002583: SQL Injection in graph_templates.php
-bug#0002584: SQL Injection in host_templates.php
-bug#0002586: Cannot delete data sources from the GUI
-bug#0002592: graph_view.php - viewing host in new tab - Undefined index: nodeid
-bug#0002594: status_fail_date and status_rec_date are set incorrectly after host is marked down
-bug#0002597: Incorrect value in Hosts column on Host Templates page
-bug#0002598: Incorrect row number in Devices -> (Edit) page

0.8.8d
-feature: Remove un-needed fonts and javascript files
-bug: Fixed XSS VN: JVN#78187936 / TN:JPCERT#98968540
-bug#0002261: PHP 5.4.0 added new error_reporting variable, causing cacti to show errors 
-bug#0002391: Odd Behaviour on ReIndex of Data Query Data 
-bug#0002393: Broken thumbnail images for graph templates 
-bug#0002402: Subtree must not have the same header as the parent header 
-bug#0002474: CLI add_device.php dows not set availability_method correctly 
-bug#0002449: The Save button does not work: Invalid html on page Console -> Cacti Settings: empty form tag 
-bug#0002428: Fail to delete all data input items when removing more than 1000 data sources
-bug#0002439: Password with special character don't work with LDAP authentication 
-bug#0002461: invalid bn with ldap and anonymous bind 
-bug#0002465: Graph Export return empty CSV file 
-bug#0002484: Incorrect SQL request in cli script repair_database.php 
-bug#0002485: Broken pagenation on graph viewing
-bug#0002489: SNMP - Get Mounted Partitions using Re-index method of Index Count Changed causes recache event every time 