@@ -3,6 +3,7 @@ Cacti CHANGELOG
 0.8.8e
 -bug: Fixed issue with graph zooming failing to work
 -bug: Fixed various SQL Injection vectors
+-bug#0002569: Impossible to have a URL pointing directly to a graph
 -bug#0002574: SQL Injection Vulnerabilitie in graph items and graph template items
 -bug#0002577: CVE-2015-4634 - SQL injection in graphs.php
 -bug#0002579: SQL Injection Vulnerabilitie in data sources
